   SessionObject
 - UserSettingMailStorage class for typical storage operatinos (save, load
   & delete)
 - Added cache for user's mail settings (according to other existing storage
   classes)
 - Refactored UserSettingMail: SessionObject no more holds a reference to
   an instance of UserSettingMail rather than fetching a cached instance on
   SessionObject.getUserSettingMail() invokations.

* 2007-08-03 - thorben.betten@open-xchange.com

 - Fixed forwarding of messages with inline images
 - Fastened message cache
 - Fixed: Invalidation of user configuration now affects session, too

* 2007-08-03 - francisco.laguna@open-xchange.com

 - Fixed bug #8673. Added a new servletmapping to allow Vista Home Basic to connect
   on the first level. 
   
########### LOOK MA! NO HANDS! CONFIGCHANGE CONFIGCHANGE#############

in the servletmapping.properties we have a new entry:

infostore*:com.openexchange.webdav.Infostore

in the apache configuration:

JkMount /infostore ajp13
JkMount /infostore/ ajp13
JkMount /infostore/* ajp13

#####################################################################
 - Fixed Bug #8676: Return correct lockdiscovery property on LOCK for LockNull resources.

* 2007-08-02 - martin.kauss@open-xchange.com

 - Fixed bug #6408. Reminders greater than 3 weeks did not work as expected
   because the calculation was done with an int instead of a long. Fixed.

* 2007-08-02 - sebastian.kauss@open-xchange.com

 - Fixed Bug #7393 - Folder 0 cannot be resolved
 - Fixed Bug #8618 - ICal import is possible if calendar module is disabled 
 - Fixed Bug #8635 - Use transaction to generate unique id for reminder
 - Fixed Bug #8545 - Reminder import use more database connections
 - Fixed Bug #7142 - Log permission exception as debug

* 2007-08-02 - marcus.klein@open-xchange.com

 - Bugfix #7936: Changed error messages for filestore, ajax and login.
 - Bugfix #7202: Fixed creating the next recurrence of tasks.