@@ -7,27 +7,32 @@ import java.sql.SQLException;
 import com.openexchange.groupware.delete.ContextDelete;
 import com.openexchange.groupware.delete.DeleteEvent;
 import com.openexchange.groupware.delete.DeleteFailedException;
-import com.openexchange.groupware.delete.DeleteListener;
-import com.openexchange.groupware.ldap.LdapException;
-import com.openexchange.server.DBPoolingException;
 
 public class QuotaUsageDelete extends ContextDelete {
 
-	public void deletePerformed(DeleteEvent sqlDelEvent, Connection readCon,
-			Connection writeCon) throws DeleteFailedException, LdapException,
-			SQLException, DBPoolingException {
-		
-		if(!isContextDelete(sqlDelEvent))
+	private static final org.apache.commons.logging.Log LOG = org.apache.commons.logging.LogFactory
+			.getLog(QuotaUsageDelete.class);
+
+	public void deletePerformed(final DeleteEvent sqlDelEvent, final Connection readCon, final Connection writeCon)
+			throws DeleteFailedException {
+
+		if (!isContextDelete(sqlDelEvent))
 			return;
-		
+
 		PreparedStatement stmt = null;
-		try{
+		try {
 			stmt = writeCon.prepareStatement("DELETE FROM filestore_usage WHERE cid = ?");
-			stmt.setInt(1,sqlDelEvent.getContext().getContextId());
+			stmt.setInt(1, sqlDelEvent.getContext().getContextId());
 			stmt.executeUpdate();
+		} catch (final SQLException e) {
+			throw new DeleteFailedException(DeleteFailedException.Code.SQL_ERROR, e, e.getLocalizedMessage());
 		} finally {
-			if(stmt != null)
-				stmt.close();
+			if (stmt != null)
+				try {
+					stmt.close();
+				} catch (final SQLException e) {
+					LOG.error(e.getLocalizedMessage(), e);
+				}
 		}
 	}
 
